# luajit-rule-engine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TESTING.md  run_tests.sh  view_coverage.sh
benchmarks/: CMakeLists.txt  README.md  analyze_ultra_complex.cpp  generate_report.py  run_benchmarks.sh  verify_setup.sh
benchmarks/include/: benchmark_common.h  data_generator.h  native_rules.h
benchmarks/src/: benchmark_common.cpp  data_generator.cpp  native_rules.cpp
benchmarks/src/benchmarks/: basic_benchmark.cpp  comparison_benchmark.cpp  scaling_benchmark.cpp  stress_benchmark.cpp
benchmarks/src/rules/: complex_risk_control.lua  medium_validation.lua  simple_age_check.lua  ultra_complex.lua
cmake/: ljre-config.cmake
docs/: BENCHMARK_PLAN.md  COVERAGE_QUICKSTART.md  COVERAGE_UBUNTU.md  ULTRA_COMPLEX_ANALYSIS.md
examples/: CMakeLists.txt  example.cpp  rule_config.lua
examples/rules/: age_check.lua  email_validation.lua  user_info_complete.lua
include/ljre/: data_adapter.h  json_adapter.h  lua_state.h  rule_engine.h
src/: json_adapter.cpp  lua_state.cpp  rule_engine.cpp
tests/: CMakeLists.txt  data_adapter_test.cpp  integration_test.cpp  lua_stack_guard_test.cpp  lua_state_test.cpp  rule_engine_test.cpp  test_helpers.h
